// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCore kind:primary href:# light:false visitable:false focused 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1865f2",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:false visitable:false hovered 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1865f2",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:false visitable:false pressed 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1b50b3",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:false visitable:true focused 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1865f2",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:false visitable:true hovered 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1865f2",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:false visitable:true pressed 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      ":visited": Object {
        "color": "#6645b0",
      },
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1b50b3",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:true visitable:false focused 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#ffffff",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:true visitable:false hovered 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#ffffff",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:true visitable:false pressed 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#b5cefb",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:false focused 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1865f2",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:false hovered 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1865f2",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:false pressed 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1b50b3",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:true focused 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1865f2",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:true hovered 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1865f2",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:true pressed 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      ":visited": Object {
        "color": "#6645b0",
      },
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1b50b3",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:false focused 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#ffffff",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:false hovered 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#ffffff",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:false pressed 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#b5cefb",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:# light:false visitable:false focused 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1865f2",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:# light:false visitable:false hovered 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1865f2",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:# light:false visitable:false pressed 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1b50b3",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false visitable:false focused 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1865f2",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false visitable:false hovered 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1865f2",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false visitable:false pressed 1`] = `
<a
  aria-label=""
  className=""
  href="#"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "MozOsxFontSmoothing": "inherit",
      "WebkitFontSmoothing": "inherit",
      "background": "transparent",
      "border": "none",
      "boxSizing": "border-box",
      "color": "#1b50b3",
      "cursor": "pointer",
      "font": "inherit",
      "lineHeight": "normal",
      "margin": 0,
      "outline": "none",
      "overflow": "visible",
      "padding": 0,
      "textDecoration": "underline currentcolor solid",
      "touchAction": "manipulation",
      "userSelect": "none",
      "width": "auto",
    }
  }
  tabIndex={0}
>
  Click me
</a>
`;
